--- a/2-OpenAI and Ollama/GettingStarted.ipynb
+++ b/2-OpenAI and Ollama/GettingStarted.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "OpenAI setup and basic exaplanations on creating a custom LLM using OpenAI's GPT-4."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
